chore: fix backend docker build and ui updates

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ POSTGRES_DB=jugnu_db
 DATABASE_URL=postgresql://jugnu:change_me@postgres:5432/jugnu_db
 
 # Ollama
-OLLAMA_URL=http://ollama:11434/api/generate
-OLLAMA_MODEL=mistral
+OLLAMA_URL=http://host.docker.internal:11434/api/generate
+OLLAMA_MODEL=qwen2.5:1.5b
 OLLAMA_TIMEOUT_MS=6000
 
 # Frontend
